show server files download file notification while downloading create some static methods for server-handling